--- a/newuser.html
+++ b/newuser.html
@@ -482,7 +482,7 @@
               
                     <div class="form-actions no-margin">
                       <button type="submit" class="btn btn-info pull-right">
-                        Registar
+                        Register
                       </button>
                       <div class="clearfix">
                       </div>
