Fix some bad html

--- a/newuser.html
+++ b/newuser.html
@@ -460,7 +460,7 @@
                     </div>
                     
                     <!-- INTERESTS -->
-                    <div id="interests" class="control-group">
+                    <div id="interest" class="control-group">
                       <label class="control-label">
                         Interests
                       </label>
@@ -470,7 +470,7 @@
                     </div>
 
                     <!-- REFERRED -->
-                    <div id="referred" class="control-group">
+                    <div id="refer" class="control-group">
                       <label class="control-label">
                         Referred by
                       </label>
