--- a/user.html
+++ b/user.html
@@ -538,8 +538,11 @@
         &copy; Cycles for Change 2013
       </p>
     </footer>
-    
-    <script src="js/jquery.min.js">
+    <div class="loading_modal"></div>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    </script>
+    <script type="text/javascript">
+      $("body").addClass("loading");
     </script>
     <script src="js/bootstrap.js">
     </script>
@@ -625,7 +628,7 @@
             $("#incomelevel").hide();
             $("#schoollunch").hide();
           }
-
+          $("body").removeClass("loading");
         });
      
       });
