--- a/newuser.html
+++ b/newuser.html
@@ -710,6 +710,8 @@
           'interests' : interests,
           'referred' : referred,
           'referred_other' : referred_other,
+          'incomelevels_members' : incomelevels_members,
+          'incomelevels_income' : incomelevels_income,
         } );
        
         //PROCESS THE COMPLETED FORM
