--- a/newuser.html
+++ b/newuser.html
@@ -691,7 +691,7 @@
             referred_other = $form.find( 'textarea[id="referred_other"]' ).val(),
             incomelevels_members = $form.find( 'input[id="incomelevels_members"]' ).val(),
             incomelevels_income = $form.find( 'select[id="incomelevels_income"]' ).val(),
-            url = "http://thawing-mesa-1192.herokuapp.com/user/new";
+            url = "https://thawing-mesa-1192.herokuapp.com/user/new";
 
         //POST TO OUR API
         var posting = $.post( url, { 
