--- a/newuser.html
+++ b/newuser.html
@@ -493,7 +493,8 @@
                           <option value="no">
                             No
                           </option>                          
-                        </select>                       </div>
+                        </select>                       
+                      </div>
                     </div>
                     
                     <!-- INCOME -->
