--- a/user.html
+++ b/user.html
@@ -505,7 +505,7 @@
                             <!-- BEGIN SCHOOL LUNCH -->
                             <div id="schoollunch" class="control-group" style="display:none">
                               <label class="control-label">
-                                School lunch question
+                                Do you receive free school lunch?
                               </label>
                               <div class="controls">
                                 <select id="incomelevels_schoollunch" class="span6">
