Moving site to heroku

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <script type="text/javascript">
-window.location.href = "http://thawing-mesa-1192.herokuapp.com";
+window.location.href = "https://thawing-mesa-1192.herokuapp.com";
 </script>
 </head>
 <body>
